# riasc-operator

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg
kubernetes/: deployment.yaml  rbac.yaml  service.yaml  webhook.yaml
kubernetes/crds/: schedulerconfig.yaml
kubernetes/example/: chroma4q.yaml  pod.yaml  project.yaml  schedulerconfig.yaml  timesyncconfig.yaml
src/riasc_operator/: operator.py  project.py  time_sync.py
src/riasc_operator/devices/: chroma4q.py
src/riasc_operator/utils/: labels.py
src/time_sync/: status.py
