[metadata]
name = riasc-operator
version = 0.1.0
description = Kubernetes operator for RIasC based on kopf
long_description = file: README.md
keywords = kubernetes, operator, kopf, riasc
license = Apache 2.0

[options]
package_dir =
    = src
packages = find:
install_requires =
    kubernetes
    kopf[dev]
    jinja2
    dotmap
    gpsdclient
    tornado
    pyvisa

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    riasc-operator = riasc_operator.operator:main
    time-sync-status = time_sync.status:main
